@@ -37,7 +37,7 @@ Follow variables are useable :
 	<!-- Thumbnails -->
 	<?php foreach ($images as $image) : ?>
 	
-	<div id="ngg-image-<?php echo $image->pid ?>" class="ngg-gallery-thumbnail-box">
+	<div id="ngg-image-<?php echo $image->pid ?>" class="ngg-gallery-thumbnail-box" <?php echo $gallery->imagewidth ?> >
 		<div class="ngg-gallery-thumbnail" >
 			<a href="<?php echo $image->imageURL ?>" title="<?php echo $image->description ?>" <?php echo $image->thumbcode ?> >
 				<img title="<?php echo $image->alttext ?>" alt="<?php echo $image->alttext ?>" src="<?php echo $image->thumbnailURL ?>" <?php echo $image->size ?> />
@@ -45,7 +45,9 @@ Follow variables are useable :
 			<span><?php echo html_entity_decode($image->description) ?></span>
 		</div>
 	</div>
-	
+	<?php if ( $gallery->columns > 0 && ++$i % $gallery->columns == 0 ) { ?>
+	<br style="clear: both" />
+	<?php } ?>
  	<?php endforeach; ?>
  	
 	<!-- Pagination -->
